--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "22.12.0",
+    "npm": "10.9.0"
+  },
   "devDependencies": {
     "vite": "^6.0.3"
   },
