--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "lil-gui": "^0.21.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "suncalc": "^1.9.0"
   }
 }
